# picorouter

./: .gitignore  IMPROVEMENTS.md  NOTES.md  README.md  pyproject.toml
browser/: index.html  package-lock.json  package.json
browser/src/: App.tsx  retrieval.ts
data/: README.md  tool_schemas.json
data/processed/: seed.jsonl
data/scripts/: _utils.py  convert_open_datasets.py  download_sources.py  generate_empty_context.py  generate_nearmiss_refusal.py  generate_offtopic_refusal.py  generate_synthetic.py  judge_synthetic.py  merge_and_tokenize.py  validate_synthetic.py
model/: architecture.py  evaluate.py  export_onnx.py  tokenizer.json  tokenizer.py  train.py
playground/: index.html  tsconfig.app.tsbuildinfo
playground/public/: picorouter.onnx  tokenizer.json  tool_schemas.json
playground/src/: App.tsx  inference.ts  retrieval.ts
reporter/: index.html  package-lock.json  package.json
reporter/src/: App.tsx  index.css  main.tsx
reporter/src/components/: ChartPanel.tsx  Charts.tsx  FileUpload.tsx  StatsRow.tsx  ThemeToggle.tsx
reporter/src/lib/: chartDefaults.ts  parse.ts  types.ts
