[project]
name = "picorouter"
version = "0.1.0"
description = "PicoRouter is a ~14M parameter amnesiac transformer for context-grounded Q&A, tool-calling, and browser-based inference"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "sentencepiece>=0.2",
  "tokenizers>=0.21",
  "httpx>=0.28",
  "anthropic>=0.49",
  "openai>=1.68",
  "onnx>=1.17",
  "onnxruntime>=1.21",
  "torch>=2.4",
  "numpy>=2.2",
  "mwparserfromhell>=0.7",
  "wikiextractor>=3.0",
  "nltk>=3.9",
  "datasketch>=1.6",
  "onnxscript>=0.6.2",
  "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.11", "pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "data"]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 2

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = ["ruff>=0.15.8"]
